--- a/Sales-Server/package.json
+++ b/Sales-Server/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "gmail-send": "^1.2.6",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.5",
     "nodemailer": "^2.7.0",
-    "pg": "^6.1.2"
+    "pg": "^6.1.2",
+    "pg-promise": "^5.5.0"
   }
 }
